syntax = "proto3";

option csharp_namespace = "FuelManagerGrpc";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc FuelCalculator (FuelRequest) returns (FuelReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message FuelRequest {
  double gasolina = 1;
  double etanol = 2;
}

message FuelReply {
  double pct = 1;
  string message = 2;
}